# apps/api/src/main/java/com/pecunia/account/web/AccountRestControllerAdvice.java
@@ -24,6 +24,6 @@ class AccountRestControllerAdvice extends ResponseEntityExceptionHandler {
 
     @ExceptionHandler(DomainException.class)
     public ProblemDetail handleDomainException(DomainException e) {
-        return ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, e.getMessage());
+        return ProblemDetail.forStatusAndDetail(HttpStatus.UNPROCESSABLE_CONTENT, e.getMessage());
     }
 }
